// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReferenceList does not render without references 1`] = `""`;

exports[`ReferenceList renders as loading if set 1`] = `
<ContentBox
  leftActions={null}
  loading={true}
  rightActions={null}
  title={null}
>
  <ClientPaginatedList
    items={
      Immutable.List [
      ]
    }
    loading={true}
    pageSize={25}
    renderItem={[Function]}
    title={null}
  />
</ContentBox>
`;

exports[`ReferenceList renders items with (page * index) key if title is absent 1`] = `
<div
  className="__ContentBox__"
>
  <Card
    loading={false}
    title={null}
  >
    <div
      className="pa3"
    >
      <ClientPaginatedList
        items={
          Immutable.List [
            Immutable.Map {
              publication_info: Immutable.List [
                Immutable.Map {
                  journal_title: "Journal 1",
                },
              ],
            },
            Immutable.Map {
              authors: Immutable.List [
                Immutable.Map {
                  full_name: "Author 2",
                },
              ],
            },
          ]
        }
        loading={false}
        pageSize={25}
        renderItem={[Function]}
        title={null}
      />
    </div>
    <Row
      gutter={0}
      justify="space-between"
      type="flex"
    >
      <Col />
      <Col />
    </Row>
  </Card>
</div>
`;

exports[`ReferenceList renders with references 1`] = `
<div
  className="__ContentBox__"
>
  <Card
    loading={false}
    title={null}
  >
    <div
      className="pa3"
    >
      <ClientPaginatedList
        items={
          Immutable.List [
            Immutable.Map {
              titles: Immutable.List [
                Immutable.Map {
                  title: "Reference 1",
                },
              ],
            },
            Immutable.Map {
              titles: Immutable.List [
                Immutable.Map {
                  title: "Reference 2",
                },
              ],
            },
          ]
        }
        loading={false}
        pageSize={25}
        renderItem={[Function]}
        title={null}
      />
    </div>
    <Row
      gutter={0}
      justify="space-between"
      type="flex"
    >
      <Col />
      <Col />
    </Row>
  </Card>
</div>
`;
